src/test/ui/rfc-2008-non-exhaustive/variants_create.stderr
error: #[non_exhaustive] is not yet supported on variants
  --> $DIR/variants_create.rs:9:23
   |
LL |     #[non_exhaustive] Unit,
   |                       ^^^^

error: #[non_exhaustive] is not yet supported on variants
  --> $DIR/variants_create.rs:11:23
   |
LL |     #[non_exhaustive] Tuple(u32),
   |                       ^^^^^^^^^^

error: #[non_exhaustive] is not yet supported on variants
  --> $DIR/variants_create.rs:13:23
   |
LL |     #[non_exhaustive] Struct { field: u32 }
   |                       ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

